[ConfigNode] Split region group creation by database