@@ -20,7 +20,7 @@
 package org.apache.iotdb.confignode.procedure.scheduler;
 
 import org.apache.iotdb.confignode.procedure.Procedure;
-import org.apache.iotdb.confignode.procedure.scheduler.DatabaseLifecycleLockManager.DatabaseLock;
+import org.apache.iotdb.confignode.procedure.scheduler.DatabaseLockQueue.DatabaseLock;
 
 import org.junit.Assert;
 import org.junit.Test;
@@ -34,20 +34,20 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
-public class DatabaseLifecycleLockManagerTest {
+public class DatabaseLockQueueTest {
 
   @Test
   public void testRequestLocksAreScopedByDatabaseName() throws Exception {
-    final DatabaseLifecycleLockManager lockManager =
-        new DatabaseLifecycleLockManager(Mockito.mock(ProcedureScheduler.class));
+    final DatabaseLockQueue lockQueue =
+        new DatabaseLockQueue(Mockito.mock(ProcedureScheduler.class));
     final ExecutorService executor = Executors.newFixedThreadPool(2);
     final CountDownLatch sameDatabaseAcquired = new CountDownLatch(1);
-    try (final DatabaseLock ignored = lockManager.acquireLocks(Collections.singleton("root.sg"))) {
+    try (final DatabaseLock ignored = lockQueue.acquireLocks(Collections.singleton("root.sg"))) {
       final Future<?> sameDatabaseFuture =
           executor.submit(
               () -> {
                 try (final DatabaseLock sameDatabaseLock =
-                    lockManager.acquireLocks(Collections.singleton("root.sg"))) {
+                    lockQueue.acquireLocks(Collections.singleton("root.sg"))) {
                   sameDatabaseAcquired.countDown();
                 }
               });
@@ -55,7 +55,7 @@ public class DatabaseLifecycleLockManagerTest {
           executor.submit(
               () -> {
                 try (final DatabaseLock otherDatabaseLock =
-                    lockManager.acquireLocks(Collections.singleton("root.other"))) {
+                    lockQueue.acquireLocks(Collections.singleton("root.other"))) {
                   // Acquiring a different database proves the lock is not cluster-global.
                 }
               });
@@ -72,14 +72,14 @@ public class DatabaseLifecycleLockManagerTest {
   @Test
   public void testWaitingProcedureCannotBeOvertakenByRequest() throws Exception {
     final ProcedureScheduler scheduler = Mockito.mock(ProcedureScheduler.class);
-    final DatabaseLifecycleLockManager lockManager = new DatabaseLifecycleLockManager(scheduler);
+    final DatabaseLockQueue lockQueue = new DatabaseLockQueue(scheduler);
     final Procedure<?> owner = procedure(1);
     final Procedure<?> waiter = procedure(2);
     final Set<String> databases = Collections.singleton("root.sg");
 
-    Assert.assertNull(lockManager.tryLock(owner, databases));
-    Assert.assertEquals("root.sg", lockManager.tryLock(waiter, databases));
-    lockManager.waitProcedure(waiter, "root.sg");
+    Assert.assertNull(lockQueue.tryLock(owner, databases));
+    Assert.assertEquals("root.sg", lockQueue.tryLock(waiter, databases));
+    lockQueue.waitProcedure(waiter, "root.sg");
 
     final ExecutorService executor = Executors.newSingleThreadExecutor();
     final CountDownLatch requestAcquired = new CountDownLatch(1);
@@ -87,19 +87,19 @@ public class DatabaseLifecycleLockManagerTest {
       final Future<?> requestFuture =
           executor.submit(
               () -> {
-                try (final DatabaseLock ignored = lockManager.acquireLocks(databases)) {
+                try (final DatabaseLock ignored = lockQueue.acquireLocks(databases)) {
                   requestAcquired.countDown();
                 }
               });
       Assert.assertFalse(requestAcquired.await(200, TimeUnit.MILLISECONDS));
 
-      lockManager.releaseLocks(owner, databases);
+      lockQueue.releaseLocks(owner, databases);
       Mockito.verify(scheduler).addFront(waiter);
       Assert.assertFalse(requestAcquired.await(200, TimeUnit.MILLISECONDS));
 
-      Assert.assertNull(lockManager.tryLock(waiter, databases));
+      Assert.assertNull(lockQueue.tryLock(waiter, databases));
       Assert.assertFalse(requestAcquired.await(200, TimeUnit.MILLISECONDS));
-      lockManager.releaseLocks(waiter, databases);
+      lockQueue.releaseLocks(waiter, databases);
       Assert.assertTrue(requestAcquired.await(10, TimeUnit.SECONDS));
       requestFuture.get(10, TimeUnit.SECONDS);
     } finally {
@@ -109,50 +109,50 @@ public class DatabaseLifecycleLockManagerTest {
 
   @Test
   public void testTimedRequestLockAcquisitionHonorsTimeout() throws Exception {
-    final DatabaseLifecycleLockManager lockManager =
-        new DatabaseLifecycleLockManager(Mockito.mock(ProcedureScheduler.class));
+    final DatabaseLockQueue lockQueue =
+        new DatabaseLockQueue(Mockito.mock(ProcedureScheduler.class));
     final Procedure<?> owner = procedure(1);
     final Set<String> databases = Collections.singleton("root.sg");
-    Assert.assertNull(lockManager.tryLock(owner, databases));
+    Assert.assertNull(lockQueue.tryLock(owner, databases));
 
     final long startNanos = System.nanoTime();
-    Assert.assertNull(lockManager.tryAcquireLocks(databases, 100, TimeUnit.MILLISECONDS));
+    Assert.assertNull(lockQueue.tryAcquireLocks(databases, 100, TimeUnit.MILLISECONDS));
     Assert.assertTrue(TimeUnit.NANOSECONDS.toSeconds(System.nanoTime() - startNanos) < 5);
 
-    lockManager.releaseLocks(owner, databases);
+    lockQueue.releaseLocks(owner, databases);
   }
 
   @Test
   public void testFailedMultiDatabaseAcquisitionDoesNotLeakPartialLocks() {
-    final DatabaseLifecycleLockManager lockManager =
-        new DatabaseLifecycleLockManager(Mockito.mock(ProcedureScheduler.class));
+    final DatabaseLockQueue lockQueue =
+        new DatabaseLockQueue(Mockito.mock(ProcedureScheduler.class));
     final Procedure<?> firstProcedure = procedure(1);
     final Procedure<?> secondProcedure = procedure(2);
 
-    Assert.assertNull(lockManager.tryLock(firstProcedure, Collections.singleton("root.b")));
-    Assert.assertEquals("root.b", lockManager.tryLock(secondProcedure, Set.of("root.a", "root.b")));
+    Assert.assertNull(lockQueue.tryLock(firstProcedure, Collections.singleton("root.b")));
+    Assert.assertEquals("root.b", lockQueue.tryLock(secondProcedure, Set.of("root.a", "root.b")));
 
-    try (final DatabaseLock ignored = lockManager.acquireLocks(Collections.singleton("root.a"))) {
+    try (final DatabaseLock ignored = lockQueue.acquireLocks(Collections.singleton("root.a"))) {
       // The partial root.a acquisition of secondProcedure must have been released.
     }
-    lockManager.releaseLocks(firstProcedure, Collections.singleton("root.b"));
+    lockQueue.releaseLocks(firstProcedure, Collections.singleton("root.b"));
   }
 
   @Test
   public void testRequestLocksAreReentrantOnTheOwningThread() {
-    final DatabaseLifecycleLockManager lockManager =
-        new DatabaseLifecycleLockManager(Mockito.mock(ProcedureScheduler.class));
+    final DatabaseLockQueue lockQueue =
+        new DatabaseLockQueue(Mockito.mock(ProcedureScheduler.class));
     final Procedure<?> procedure = procedure(1);
     final Set<String> databases = Collections.singleton("root.sg");
 
-    try (final DatabaseLock outerLock = lockManager.acquireLocks(databases)) {
-      try (final DatabaseLock innerLock = lockManager.acquireLocks(databases)) {
-        Assert.assertEquals("root.sg", lockManager.tryLock(procedure, databases));
+    try (final DatabaseLock outerLock = lockQueue.acquireLocks(databases)) {
+      try (final DatabaseLock innerLock = lockQueue.acquireLocks(databases)) {
+        Assert.assertEquals("root.sg", lockQueue.tryLock(procedure, databases));
       }
-      Assert.assertEquals("root.sg", lockManager.tryLock(procedure, databases));
+      Assert.assertEquals("root.sg", lockQueue.tryLock(procedure, databases));
     }
-    Assert.assertNull(lockManager.tryLock(procedure, databases));
-    lockManager.releaseLocks(procedure, databases);
+    Assert.assertNull(lockQueue.tryLock(procedure, databases));
+    lockQueue.releaseLocks(procedure, databases);
   }
 
   private static Procedure<?> procedure(final long procedureId) {
